--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <h1>
         Odin Recipes
     </h1>
-    <a href="recipes/yakisoba.html">Yakisoba Chicken</a>
+    <ul>
+    <li><a href="recipes/yakisoba.html">Yakisoba Chicken</a></li>
+    <li><a href="recipes/friedchicken.html">Fried Chicken</a></li>
+    <li><a href="recipes/bakedchicken.html">Baked Chicken</a></li>
+    </ul>
 </body>
 </html>
