added some colors to the home page and fried chicken

--- a/recipes/friedchicken.html
+++ b/recipes/friedchicken.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Fried Chicken Recipe</title>
+    <link rel="stylesheet" href="../css/fried-chicken.css"> 
 </head>
 <body>
     <h1>
         Fried Chicken 
     </h1>
-    <img src="../img/friedchicken.png">
-    <h2>
+    <img src="../img/friedchicken.png" alt="fried-chicken">
+<div class="description-container">
+    <h2 class>
         Description
     </h2>
     
-    <p> This is the only crispy fried chicken recipe you'll ever need. 
+    <p class="description-text"> This is the only crispy fried chicken recipe you'll ever need. 
         Why? It combines all the tried-and-true tricks to ensure the juiciest, 
         most flavorful, crispiest chicken every time.</p>
-
+</div>
     <h2>
         Ingredients
     </h2>
@@ -24,7 +26,7 @@
         <li>Chicken piece of choice</li>
         <li>Vegetable oil of choice, for frying the chicken</li>
         <li>6 cups all-purpose flour</li>
-        <li>5 tablespoons salt</li>
+        <li>5 tablespoons salt</li> 
         <li>4 tablespoons ground black pepper</li>
         <li>2 tablespoons garlic powder</li>
         <li>1 tablespoon onion powder</li>
@@ -34,6 +36,7 @@
     <h2>
         Steps
     </h2>
+    <div class="steps-container">
     <ol>
         <li>Combine the flour, paprika, salt, and pepper
             in a zip-top bag. Seal the bag and shake until well-combined. </li>
@@ -47,5 +50,7 @@
         <li>Remove the cover, return the heat to high,
             and fry until extra crispy. Drain the chicken on paper towels.</li>
     </ol>
+    </div>
+
 </body>
 </html>
