--- a/recipes/yakisoba.html
+++ b/recipes/yakisoba.html
@@ -8,7 +8,7 @@
     <h1>
         Yakisoba Chicken
     </h1>
-    <img src="../img/yakisoba.png">
+    <img src="../img/yakisoba.png" alt="yakisoba-chicken">
     <h2>
         Description
     </h2>
