--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <h1>
-        Odin Recipes
-    </h1>
+<body class="visual">
+    <div id="title">
+        <h1>
+            Odin Recipes
+        </h1>
+    </div>
     <ul>
     <li><a href="recipes/yakisoba.html">Yakisoba Chicken</a></li>
     <li><a href="recipes/friedchicken.html">Fried Chicken</a></li>
     <li><a href="recipes/bakedchicken.html">Baked Chicken</a></li>
-    </ul>
+    </ul>   
 </body>
 </html>
