--- a/recipes/bakedchicken.html
+++ b/recipes/bakedchicken.html
@@ -8,7 +8,7 @@
     <h1>
         Yakisoba Chicken
     </h1>
-    <img src="../img/bakedchicken.png">
+    <img src="../img/bakedchicken.png" alt="baked-chicken">
     <h2>
         Description
     </h2>
